<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:text="@string/track_not_found"
            android:textSize="16sp"
            android:textColor="@color/font2"
            android:padding="@dimen/padding_double"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <!--<com.teknokrait.mussichusettsapp.view.custom.VerticalRecyclerView-->
            <!--android:id="@+id/recyclerView"-->
            <!--android:name="com.teknokrait.mussichusettsapp.view.custom.VerticalRecyclerView"-->
            <!--android:nestedScrollingEnabled="false"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->

    <ProgressBar
            android:theme="@style/AppTheme.Accent"
            android:visibility="visible"
            android:layout_gravity="center"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

</LinearLayout>